--- a/LoL/LoL/MainWindow.xaml
+++ b/LoL/LoL/MainWindow.xaml
@@ -8,19 +8,75 @@
         <TabControl x:Name="tcMain" HorizontalAlignment="Stretch" Margin="0,97,0,10" VerticalAlignment="Stretch" >
             <TabItem Header="Home" FontSize="14" Padding="10,0,10,0">
                 <Grid Background="#FFE5E5E5">
-                    <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center" >
-                        <Label FontSize="18">Please enter a summoner name</Label>
-                        <Label FontSize="16">The following stats will show:</Label>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="120"/>
+                        <RowDefinition Height="10*"/>
+                        <RowDefinition Height="10*"/>
+                        <RowDefinition Height="10*"/>
+                        <RowDefinition Height="10*"/>
+                        <RowDefinition Height="10*"/>
+                        <RowDefinition Height="10*"/>
+                        <RowDefinition Height="10*"/>
+                        <RowDefinition Height="10*"/>
+                        <RowDefinition Height="10*"/>
+                        <RowDefinition Height="10*"/>
+                    </Grid.RowDefinitions>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="20*"/>
+                        <ColumnDefinition Width="40*"/>
+                        <ColumnDefinition Width="40*"/>
+                    </Grid.ColumnDefinitions>
+                    <StackPanel Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="10 10 0 0" Visibility="{Binding SummonerInfoVisibility}">
+                        <Grid>
+                            <Grid.RowDefinitions>
+                                <RowDefinition Height="50*"/>
+                                <RowDefinition Height="50*"/>
+                            </Grid.RowDefinitions>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition/>
+                                <ColumnDefinition/>
+                            </Grid.ColumnDefinitions>
+
+                            <TextBlock Grid.Row="0" Grid.Column="0" FontSize="22" Margin="0 0 10 0">Summoner:</TextBlock>
+                            <TextBlock Grid.Row="0" Grid.Column="1" FontSize="22" Foreground="Red" Text="{Binding SummonerTitle}"></TextBlock>
+                            <TextBlock Grid.Row="1" Grid.Column="0" FontSize="18" Margin="0 0 10 0" >Level:</TextBlock>
+                            <TextBlock Grid.Row="1" Grid.Column="1" FontSize="18" Foreground="Blue" Text="{Binding SummonerLevel}"></TextBlock>
+                        </Grid>
+                    </StackPanel>
+                    <StackPanel Grid.Row="0" Grid.Column="2" HorizontalAlignment="Left" VerticalAlignment="Center">
+                        <TextBlock FontSize="18" Margin="0,0,0,10">Please enter a summoner name</TextBlock>
+                        <!-- <Label FontSize="16">The following stats will show:</Label>
                         <Label FontSize="14">• Rank</Label>
                         <Label FontSize="14">• Ranked Stats</Label>
                         <Label FontSize="14">• Summoner Statistics</Label>
                         <Label FontSize="14">• Top five champs</Label>
-                        <Label></Label>
-                        <TextBox x:Name="tbSummonerName" FontSize="16" Text="{Binding Path=SummonerName, Mode=TwoWay}" GotMouseCapture="tbSummonerName_GotMouseCapture" ></TextBox>
-                        <Label></Label>
+                        <Label></Label> -->
+                        <TextBox x:Name="tbSummonerName" FontSize="16" Text="{Binding Path=SummonerName, Mode=TwoWay}" GotMouseCapture="tbSummonerName_GotMouseCapture" Margin="0,0,0,10"></TextBox>
                         <Button Width="50" FontSize="16" Click="Button_Click" >Go</Button>
                     </StackPanel>
-
+                    <Border Grid.RowSpan="10" Grid.Column="1" Grid.Row="1" BorderBrush="Black" BorderThickness="0.3 0 0 0" SnapsToDevicePixels="True"/>
+                    <Border Grid.RowSpan="10" Grid.Column="2" Grid.Row="1" BorderBrush="Black" BorderThickness="0.3 0 0 0" SnapsToDevicePixels="True"/>
+                    <Border Grid.Row="1" Grid.ColumnSpan="3" BorderBrush="Black" BorderThickness="0 0.3 0 0.3" SnapsToDevicePixels="True"/>
+                    <TextBlock Grid.Row="1" Grid.Column="1" FontSize="18" HorizontalAlignment="Center" VerticalAlignment="Center">NORMAL 5v5</TextBlock>
+                    <TextBlock Grid.Row="1" Grid.Column="2" FontSize="18" HorizontalAlignment="Center" VerticalAlignment="Center">RANKED 5v5</TextBlock>
+                    <TextBlock Grid.Row="2" Grid.Column="0" FontSize="16" HorizontalAlignment="Center" VerticalAlignment="Center">Average Kills:</TextBlock>
+                    <Border Grid.Row="2" Grid.ColumnSpan="3" BorderBrush="Black" BorderThickness="0 0 0 0.3" SnapsToDevicePixels="True"/>
+                    <TextBlock Grid.Row="3" Grid.Column="0" FontSize="16" HorizontalAlignment="Center" VerticalAlignment="Center">Average Deaths:</TextBlock>
+                    <Border Grid.Row="3" Grid.ColumnSpan="3" BorderBrush="Black" BorderThickness="0 0 0 0.3" SnapsToDevicePixels="True"/>
+                    <TextBlock Grid.Row="4" Grid.Column="0" FontSize="16" HorizontalAlignment="Center" VerticalAlignment="Center">Average Gold:</TextBlock>
+                    <Border Grid.Row="4" Grid.ColumnSpan="3" BorderBrush="Black" BorderThickness="0 0 0 0.3" SnapsToDevicePixels="True"/>
+                    <TextBlock Grid.Row="5" Grid.Column="0" FontSize="16" HorizontalAlignment="Center" VerticalAlignment="Center">Average Form:</TextBlock>
+                    <Border Grid.Row="5" Grid.ColumnSpan="3" BorderBrush="Black" BorderThickness="0 0 0 0.3" SnapsToDevicePixels="True"/>
+                    <TextBlock Grid.Row="6" Grid.Column="0" FontSize="16" HorizontalAlignment="Center" VerticalAlignment="Center">Ward Score:</TextBlock>
+                    <Border Grid.Row="6" Grid.ColumnSpan="3" BorderBrush="Black" BorderThickness="0 0 0 0.3" SnapsToDevicePixels="True"/>
+                    <TextBlock Grid.Row="7" Grid.Column="0" FontSize="16" HorizontalAlignment="Center" VerticalAlignment="Center">Total Games:</TextBlock>
+                    <Border Grid.Row="7" Grid.ColumnSpan="3" BorderBrush="Black" BorderThickness="0 0 0 0.3" SnapsToDevicePixels="True"/>
+                    <TextBlock Grid.Row="8" Grid.Column="0" FontSize="16" HorizontalAlignment="Center" VerticalAlignment="Center">Average Game time:</TextBlock>
+                    <Border Grid.Row="8" Grid.ColumnSpan="3" BorderBrush="Black" BorderThickness="0 0 0 0.3" SnapsToDevicePixels="True"/>
+                    <TextBlock Grid.Row="9" Grid.Column="0" FontSize="16" HorizontalAlignment="Center" VerticalAlignment="Center">Wins:</TextBlock>
+                    <Border Grid.Row="9" Grid.ColumnSpan="3" BorderBrush="Black" BorderThickness="0 0 0 0.3" SnapsToDevicePixels="True"/>
+                    <TextBlock Grid.Row="10" Grid.Column="0" FontSize="16" HorizontalAlignment="Center" VerticalAlignment="Center">Losses:</TextBlock>
+                    <Border Grid.Row="10" Grid.ColumnSpan="3" BorderBrush="Black" BorderThickness="0 0 0 0.3" SnapsToDevicePixels="True"/>
                 </Grid>
             </TabItem>
             <TabItem Header="Summoner Lookup" FontSize="14"  Padding="10,0,10,0">
@@ -35,17 +91,17 @@
                     <Label Grid.Row="0">Top five champions</Label>
                     <Grid Grid.Row="1">
                         <Grid.ColumnDefinitions>
-                             <ColumnDefinition Width="*"/>
-                             <ColumnDefinition Width="*"/>
-                             <ColumnDefinition Width="*"/>
-                             <ColumnDefinition Width="*"/>
-                             <ColumnDefinition Width="*"/>
+                            <ColumnDefinition Width="*"/>
+                            <ColumnDefinition Width="*"/>
+                            <ColumnDefinition Width="*"/>
+                            <ColumnDefinition Width="*"/>
+                            <ColumnDefinition Width="*"/>
                         </Grid.ColumnDefinitions>
                         <Border Grid.Row="0" Grid.Column="0" BorderBrush="Black" BorderThickness="0 0.3 0.3 0.3" SnapsToDevicePixels="True"/>
                         <StackPanel Grid.Column="0" HorizontalAlignment="Center" VerticalAlignment="Center" >
-                                <Label  FontSize="18" HorizontalAlignment="Center">Champion I</Label>
-                                <Label  FontSize="18" HorizontalAlignment="Center">Averages</Label>
-                            </StackPanel>
+                            <Label  FontSize="18" HorizontalAlignment="Center">Champion I</Label>
+                            <Label  FontSize="18" HorizontalAlignment="Center">Averages</Label>
+                        </StackPanel>
                         <Border Grid.Row="0" Grid.Column="1" BorderBrush="Black" BorderThickness="0 0.3 0.3 0.3" SnapsToDevicePixels="True"/>
                         <StackPanel Grid.Column="1" HorizontalAlignment="Center" VerticalAlignment="Center" >
                             <Label  FontSize="18" HorizontalAlignment="Center">Champion II</Label>
@@ -120,7 +176,7 @@
                                 <TextBlock FontSize="16">Kills:</TextBlock>
                                 <TextBlock FontSize="16">Deaths:</TextBlock>
                                 <TextBlock FontSize="16">Assists:</TextBlock>
-                             </StackPanel>
+                            </StackPanel>
                         </Grid>
                         <!--<StackPanel Grid.Row="1" Grid.Column="3" HorizontalAlignment="Center" VerticalAlignment="Center" >
                             
@@ -155,32 +211,11 @@
                         <Border Grid.Row="0" Grid.Column="4" BorderBrush="Black" BorderThickness="0 0.3 0 0.3" SnapsToDevicePixels="True"/>
                         <StackPanel Grid.Column="4" HorizontalAlignment="Center" VerticalAlignment="Center" >
                             <Label  FontSize="18" HorizontalAlignment="Center">Champ V</Label>
-                                </StackPanel>
+                        </StackPanel>
                     </Grid>
                 </Grid>
             </TabItem>
-            <TabItem Header="Career Averages" FontSize="14"  Padding="10,0,10,0">
-                <Grid Background="#FFE5E5E5" Margin="0,0,0,-79">
-                    <Grid.RowDefinitions>
-                        <RowDefinition Height="120"/>
-                        <RowDefinition Height="*"/>
-                    </Grid.RowDefinitions>
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="20*"/>
-                        <ColumnDefinition Width="40*"/>
-                        <ColumnDefinition Width="40*"/>
-                    </Grid.ColumnDefinitions>
-                    <StackPanel Grid.Row="0" Grid.ColumnSpan="3" HorizontalAlignment="Center" VerticalAlignment="Top" >
-                        <TextBlock FontSize="16">Please enter a summoner name</TextBlock>
-                        <TextBlock FontSize="16" HorizontalAlignment="Center">for career stats:</TextBlock>
-                        <Label></Label>
-                        <TextBox FontSize="16" Text="{Binding Path=SummonerName, Mode=TwoWay}" GotMouseCapture="tbSummonerName_GotMouseCapture" ></TextBox>
-                        <Label></Label>
-                        <Button Width="50" FontSize="16" Click="Button_Click" >Go</Button>
-                    </StackPanel>
 
-                </Grid>    
-            </TabItem>
         </TabControl>
         <Image HorizontalAlignment="Left" Height="70" Margin="10,10,0,0" VerticalAlignment="Top" Width="70" Source="Logo.png"/>
 
