--- a/LoL/LoL/MainWindow.xaml
+++ b/LoL/LoL/MainWindow.xaml
@@ -39,14 +39,14 @@
                         <TextBlock FontSize="14" Margin="0 0 0 10">• Ranked Stats</TextBlock>
                         <TextBlock FontSize="14" Margin="0 0 0 10">• Summoner Statistics</TextBlock>
                         <TextBlock FontSize="14" Margin="0 0 0 20">• Top five champs</TextBlock>
-                        <TextBox x:Name="tbSummonerName"  FontSize="16" Text="{Binding Path=SummonerName, Mode=TwoWay}" GotMouseCapture="tbSummonerName_GotMouseCapture" Margin="0 0 0 10"></TextBox>
+                        <TextBox x:Name="tbSummonerName"  FontSize="16" Text="{Binding Path=SummonerName, Mode=TwoWay}" GotMouseCapture="tbSummonerName_GotMouseCapture" Margin="0 0 0 10" ></TextBox>
                         <ComboBox ItemsSource="{Binding Regions}"  DisplayMemberPath="Name"  SelectedValuePath="Code" SelectedItem="{Binding Path=SelectedRegion, Mode=TwoWay}" Margin="0 0 0 10"></ComboBox>
-                        <Button Width="50" FontSize="14" Click="Button_Click">Go</Button>
+                        <Button x:Name="btnSearch" Width="50" FontSize="14" Click="Button_Click" KeyDown="Button_KeyDown" >Search</Button>
                
                     </StackPanel>
                 </Grid>  
             </TabItem>
-            <TabItem Header="Summoner Lookup" FontSize="14"  Padding="10,0,10,0">
+            <TabItem Header="Summoner Lookup" FontSize="14"  Padding="10,0,10,0" IsEnabled="{Binding TabPagesEnabled}">
                 <Grid Background="#FFE5E5E5">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="9*"/>
@@ -70,28 +70,108 @@
                         </Grid.ColumnDefinitions>
                         <Border Grid.Row="0" Grid.Column="0" BorderBrush="Black" BorderThickness="0 0.3 0.3 0.3" SnapsToDevicePixels="True"/>
                         <StackPanel Grid.Column="0" HorizontalAlignment="Center" VerticalAlignment="Center" >
-                            <Label  FontSize="18" HorizontalAlignment="Center">Champion I</Label>
-                            <Label  FontSize="18" HorizontalAlignment="Center">Averages</Label>
+                            <TextBlock  FontSize="18" HorizontalAlignment="Center" Text="{Binding Champ1Name}"></TextBlock>
+                            <Grid>
+                                <Grid.RowDefinitions>
+                                    <RowDefinition/>
+                                    <RowDefinition/>
+                                    <RowDefinition/>
+                                </Grid.RowDefinitions>
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition/>
+                                    <ColumnDefinition/>
+                                </Grid.ColumnDefinitions>
+                                <TextBlock Grid.Row="0" Grid.Column="0" FontSize="14" Margin="0 0 10 0">Games:</TextBlock>
+                                <TextBlock Grid.Row="0" Grid.Column="1" FontSize="14" Text="{Binding Champ1Games}" Foreground="Blue"/>
+                                <TextBlock Grid.Row="1" Grid.Column="0" FontSize="14" Margin="0 0 10 0">Wins:</TextBlock>
+                                <TextBlock Grid.Row="1" Grid.Column="1" FontSize="14" Text="{Binding Champ1Wins}" Foreground="Green"/>
+                                <TextBlock Grid.Row="2" Grid.Column="0"  FontSize="14" Margin="0 0 10 0">Looses:</TextBlock>
+                                <TextBlock Grid.Row="2" Grid.Column="1"  FontSize="14" Text="{Binding Champ1Looses}" Foreground="Red"/>
+                            </Grid>
                         </StackPanel>
                         <Border Grid.Row="0" Grid.Column="1" BorderBrush="Black" BorderThickness="0 0.3 0.3 0.3" SnapsToDevicePixels="True"/>
                         <StackPanel Grid.Column="1" HorizontalAlignment="Center" VerticalAlignment="Center" >
-                            <Label  FontSize="18" HorizontalAlignment="Center">Champion II</Label>
-                            <Label  FontSize="18" HorizontalAlignment="Center">Averages</Label>
+                            <TextBlock  FontSize="18" HorizontalAlignment="Center" Text="{Binding Champ2Name}"></TextBlock>
+                            <Grid>
+                                <Grid.RowDefinitions>
+                                    <RowDefinition/>
+                                    <RowDefinition/>
+                                    <RowDefinition/>
+                                </Grid.RowDefinitions>
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition/>
+                                    <ColumnDefinition/>
+                                </Grid.ColumnDefinitions>
+                                <TextBlock Grid.Row="0" Grid.Column="0" FontSize="14" Margin="0 0 10 0">Games:</TextBlock>
+                                <TextBlock Grid.Row="0" Grid.Column="1" FontSize="14" Text="{Binding Champ2Games}" Foreground="Blue"/>
+                                <TextBlock Grid.Row="1" Grid.Column="0" FontSize="14" Margin="0 0 10 0">Wins:</TextBlock>
+                                <TextBlock Grid.Row="1" Grid.Column="1" FontSize="14" Text="{Binding Champ2Wins}" Foreground="Green"/>
+                                <TextBlock Grid.Row="2" Grid.Column="0"  FontSize="14" Margin="0 0 10 0">Looses:</TextBlock>
+                                <TextBlock Grid.Row="2" Grid.Column="1"  FontSize="14" Text="{Binding Champ2Looses}" Foreground="Red"/>
+                            </Grid>
                         </StackPanel>
                         <Border Grid.Row="0" Grid.Column="2" BorderBrush="Black" BorderThickness="0 0.3 0.3 0.3" SnapsToDevicePixels="True"/>
                         <StackPanel Grid.Column="2" HorizontalAlignment="Center" VerticalAlignment="Center" >
-                            <Label  FontSize="18" HorizontalAlignment="Center">Champion III</Label>
-                            <Label  FontSize="18" HorizontalAlignment="Center">Averages</Label>
+                            <TextBlock  FontSize="18" HorizontalAlignment="Center" Text="{Binding Champ3Name}"></TextBlock>
+                            <Grid>
+                                <Grid.RowDefinitions>
+                                    <RowDefinition/>
+                                    <RowDefinition/>
+                                    <RowDefinition/>
+                                </Grid.RowDefinitions>
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition/>
+                                    <ColumnDefinition/>
+                                </Grid.ColumnDefinitions>
+                                <TextBlock Grid.Row="0" Grid.Column="0" FontSize="14" Margin="0 0 10 0">Games:</TextBlock>
+                                <TextBlock Grid.Row="0" Grid.Column="1" FontSize="14" Text="{Binding Champ3Games}" Foreground="Blue"/>
+                                <TextBlock Grid.Row="1" Grid.Column="0" FontSize="14" Margin="0 0 10 0">Wins:</TextBlock>
+                                <TextBlock Grid.Row="1" Grid.Column="1" FontSize="14" Text="{Binding Champ3Wins}" Foreground="Green"/>
+                                <TextBlock Grid.Row="2" Grid.Column="0"  FontSize="14" Margin="0 0 10 0">Looses:</TextBlock>
+                                <TextBlock Grid.Row="2" Grid.Column="1"  FontSize="14" Text="{Binding Champ3Looses}" Foreground="Red"/>
+                            </Grid>
                         </StackPanel>
                         <Border Grid.Row="0" Grid.Column="3" BorderBrush="Black" BorderThickness="0 0.3 0.3 0.3" SnapsToDevicePixels="True"/>
                         <StackPanel Grid.Column="3" HorizontalAlignment="Center" VerticalAlignment="Center" >
-                            <Label  FontSize="18" HorizontalAlignment="Center">Champion IV</Label>
-                            <Label  FontSize="18" HorizontalAlignment="Center">Averages</Label>
+                            <TextBlock  FontSize="18" HorizontalAlignment="Center" Text="{Binding Champ4Name}"></TextBlock>
+                            <Grid>
+                                <Grid.RowDefinitions>
+                                    <RowDefinition/>
+                                    <RowDefinition/>
+                                    <RowDefinition/>
+                                </Grid.RowDefinitions>
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition/>
+                                    <ColumnDefinition/>
+                                </Grid.ColumnDefinitions>
+                                <TextBlock Grid.Row="0" Grid.Column="0" FontSize="14" Margin="0 0 10 0">Games:</TextBlock>
+                                <TextBlock Grid.Row="0" Grid.Column="1" FontSize="14" Text="{Binding Champ4Games}" Foreground="Blue"/>
+                                <TextBlock Grid.Row="1" Grid.Column="0" FontSize="14" Margin="0 0 10 0">Wins:</TextBlock>
+                                <TextBlock Grid.Row="1" Grid.Column="1" FontSize="14" Text="{Binding Champ4Wins}" Foreground="Green"/>
+                                <TextBlock Grid.Row="2" Grid.Column="0"  FontSize="14" Margin="0 0 10 0">Looses:</TextBlock>
+                                <TextBlock Grid.Row="2" Grid.Column="1"  FontSize="14" Text="{Binding Champ4Looses}" Foreground="Red"/>
+                            </Grid>
                         </StackPanel>
                         <Border Grid.Row="0" Grid.Column="4" BorderBrush="Black" BorderThickness="0 0.3 0 0.3" SnapsToDevicePixels="True"/>
                         <StackPanel Grid.Column="4" HorizontalAlignment="Center" VerticalAlignment="Center" >
-                            <Label  FontSize="18" HorizontalAlignment="Center">Champion V</Label>
-                            <Label  FontSize="18" HorizontalAlignment="Center">Averages</Label>
+                            <TextBlock  FontSize="18" HorizontalAlignment="Center" Text="{Binding Champ5Name}"></TextBlock>
+                            <Grid>
+                                <Grid.RowDefinitions>
+                                    <RowDefinition/>
+                                    <RowDefinition/>
+                                    <RowDefinition/>
+                                </Grid.RowDefinitions>
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition/>
+                                    <ColumnDefinition/>
+                                </Grid.ColumnDefinitions>
+                                <TextBlock Grid.Row="0" Grid.Column="0" FontSize="14" Margin="0 0 10 0">Games:</TextBlock>
+                                <TextBlock Grid.Row="0" Grid.Column="1" FontSize="14" Text="{Binding Champ5Games}" Foreground="Blue"/>
+                                <TextBlock Grid.Row="1" Grid.Column="0" FontSize="14" Margin="0 0 10 0">Wins:</TextBlock>
+                                <TextBlock Grid.Row="1" Grid.Column="1" FontSize="14" Text="{Binding Champ5Wins}" Foreground="Green"/>
+                                <TextBlock Grid.Row="2" Grid.Column="0"  FontSize="14" Margin="0 0 10 0">Looses:</TextBlock>
+                                <TextBlock Grid.Row="2" Grid.Column="1"  FontSize="14" Text="{Binding Champ5Looses}" Foreground="Red"/>
+                            </Grid>
                         </StackPanel>
                     </Grid>
                     <Grid Grid.Row="2" Grid.ColumnSpan="2">
@@ -186,7 +266,7 @@
                     </Grid>
                 </Grid>
             </TabItem>
-            <TabItem Header="Career Averages" FontSize="14" Padding="10,0,10,0">
+            <TabItem Header="Career Averages" FontSize="14" Padding="10,0,10,0" IsEnabled="{Binding TabPagesEnabled}">
                 <Grid Background="#FFE5E5E5">
                     <Grid.RowDefinitions>
                         <RowDefinition Height="10*"/>
