--- a/LoL/LoL/MainWindow.xaml
+++ b/LoL/LoL/MainWindow.xaml
@@ -1,13 +1,13 @@
 ﻿<Window x:Class="LoL.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="League Scanner" Height="728" Width="1024" WindowStartupLocation="CenterScreen"
+        Title="League Scanner" Height="768" Width="1024" WindowStartupLocation="CenterScreen"
         MinWidth="800"
         MinHeight="600">
     <Grid Background="DarkBlue">
         <TabControl x:Name="tcMain" HorizontalAlignment="Stretch" Margin="0,97,0,10" VerticalAlignment="Stretch" >
             <TabItem Header="Home" FontSize="14" Padding="10,0,10,0">
-                <Grid Background="#FFE5E5E5">
+                <Grid x:Name="gridMain" Background="Gray" >
                     <!-- <Grid.RowDefinitions>
                         <RowDefinition Height="120"/>
                     </Grid.RowDefinitions>
@@ -32,17 +32,38 @@
                             <TextBlock Grid.Row="1" Grid.Column="1" FontSize="18" Foreground="Blue" Text="{Binding SummonerLevel}"></TextBlock>
                         </Grid>
                     </StackPanel> -->
+                    <TextBlock FontSize="60" Margin="0 100 0 0" VerticalAlignment="Top" HorizontalAlignment="Center" Foreground="White" FontFamily="DengXian">LOL Scanner</TextBlock>
                     <StackPanel  HorizontalAlignment="Center" VerticalAlignment="Center">
-                        <TextBlock FontSize="18" Margin="0 0 0 10">Please enter a summoner name</TextBlock>
-                        <TextBlock FontSize="16" Margin="0 0 0 10">The following stats will show:</TextBlock>
-                        <TextBlock FontSize="14" Margin="0 0 0 10">• Rank</TextBlock>
-                        <TextBlock FontSize="14" Margin="0 0 0 10">• Ranked Stats</TextBlock>
-                        <TextBlock FontSize="14" Margin="0 0 0 10">• Summoner Statistics</TextBlock>
-                        <TextBlock FontSize="14" Margin="0 0 0 20">• Top five champs</TextBlock>
-                        <TextBox x:Name="tbSummonerName"  FontSize="16" Text="{Binding Path=SummonerName, Mode=TwoWay}" GotMouseCapture="tbSummonerName_GotMouseCapture" Margin="0 0 0 10" ></TextBox>
-                        <ComboBox ItemsSource="{Binding Regions}"  DisplayMemberPath="Name"  SelectedValuePath="Code" SelectedItem="{Binding Path=SelectedRegion, Mode=TwoWay}" Margin="0 0 0 10"></ComboBox>
-                        <Button x:Name="btnSearch" Width="50" FontSize="14" Click="Button_Click" KeyDown="Button_KeyDown" >Search</Button>
-
+                        <StackPanel Orientation="Horizontal">
+                            <ComboBox ItemsSource="{Binding Regions}"  DisplayMemberPath="Name"  SelectedValuePath="Code" SelectedItem="{Binding Path=SelectedRegion, Mode=TwoWay}" Margin="0 0 10 0" Height="30" Width="170" VerticalAlignment="Center" VerticalContentAlignment="Center"  Background="White">
+         
+                            </ComboBox>
+                            <TextBox x:Name="tbSummonerName"  FontSize="16" Text="{Binding Path=SummonerName, Mode=TwoWay}" GotMouseCapture="tbSummonerName_GotMouseCapture" Margin="0 0 10 0" Height="30" Width="200" VerticalAlignment="Center" VerticalContentAlignment="Center"></TextBox>
+                            <Button x:Name="btnSearch"  FontSize="16" Click="Button_Click" KeyDown="Button_KeyDown" Foreground="White" Height="30" Width="60" VerticalAlignment="Center" Content="Search">
+                                <Button.Style>
+                                    <Style TargetType="{x:Type Button}">
+                                        <Setter Property="Background" Value="Blue"/>
+                                        <Setter Property="Template">
+                                            <Setter.Value>
+                                                <ControlTemplate TargetType="{x:Type Button}">
+                                                    <Border Background="{TemplateBinding Background}">
+                                                        <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                                                    </Border>
+                                                </ControlTemplate>
+                                            </Setter.Value>
+                                        </Setter>
+                                        <Style.Triggers>
+                                            <Trigger Property="IsMouseOver" Value="True">
+                                                <Setter Property="Background" Value="Blue"/>
+                                            </Trigger>
+                                            <Trigger Property="IsPressed" Value="True">
+                                                <Setter Property="Background" Value="DarkBlue"/>
+                                            </Trigger>
+                                        </Style.Triggers>
+                                    </Style>
+                                </Button.Style>
+                            </Button>
+                        </StackPanel>
                     </StackPanel>
                 </Grid>
             </TabItem>
@@ -258,12 +279,16 @@
                                         <TextBlock Grid.Row="0" Grid.Column="2" Grid.ColumnSpan="2" FontSize="16" VerticalAlignment="Center" HorizontalAlignment="Center">Normal 5v5:</TextBlock>
                                         <TextBlock Grid.Row="1" Grid.Column="2"  FontSize="14" Margin="5 0 10 0">Kills:</TextBlock>
                                         <TextBlock Grid.Row="1" Grid.Column="3"  FontSize="14" Text="{Binding KillsNormal}" Foreground="Green"/>
-                                        <TextBlock Grid.Row="2" Grid.Column="2"  FontSize="14" Margin="5 0 10 0">Deaths:</TextBlock>
-                                        <TextBlock Grid.Row="2" Grid.Column="3"  FontSize="14" Text="{Binding LossesNormal}" Foreground="Green"/>
+                                       <!-- <TextBlock Grid.Row="2" Grid.Column="2"  FontSize="14" Margin="5 0 10 0">Deaths:</TextBlock>
+                                        <TextBlock Grid.Row="2" Grid.Column="3"  FontSize="14" Text="{Binding DeathsNormal}" Foreground="Green"/>
                                         <TextBlock Grid.Row="3" Grid.Column="2"  FontSize="14" Margin="5 0 10 0">Assists:</TextBlock>
                                         <TextBlock Grid.Row="3" Grid.Column="3"  FontSize="14" Text="{Binding AssistsNormal}" Foreground="Green"/>
-                                        <TextBlock Grid.Row="4" Grid.Column="2"  FontSize="14" Margin="5 0 10 0">W/L:</TextBlock>
-                                        <TextBlock Grid.Row="4" Grid.Column="3"  FontSize="14" Text="{Binding WLNormal}" Foreground="Green"/>
+                                        <TextBlock Grid.Row="4" Grid.Column="2"  FontSize="14" Margin="5 0 10 0">Wins:</TextBlock>
+                                        <TextBlock Grid.Row="4" Grid.Column="3"  FontSize="14" Text="{Binding WinsNormal}" Foreground="Green"/> -->
+                                        <TextBlock Grid.Row="2" Grid.Column="2"  FontSize="14" Margin="5 0 10 0">Assists:</TextBlock>
+                                        <TextBlock Grid.Row="2" Grid.Column="3"  FontSize="14" Text="{Binding AssistsNormal}" Foreground="Green"/>
+                                        <TextBlock Grid.Row="3" Grid.Column="2"  FontSize="14" Margin="5 0 10 0">Wins:</TextBlock>
+                                        <TextBlock Grid.Row="3" Grid.Column="3"  FontSize="14" Text="{Binding WinsNormal}" Foreground="Green"/> 
 
                                         <TextBlock Grid.Row="10" Grid.Column="0" Grid.ColumnSpan="6" FontSize="16" Margin="10 5 10 5">Ranked Averages:</TextBlock>
                                         <TextBlock Grid.Row="11" Grid.Column="0" FontSize="14" Margin="5 0 10 0">Average KDA:</TextBlock>
@@ -277,20 +302,34 @@
                                         <TextBlock Grid.Row="4" Grid.Column="2"  FontSize="14" Margin="0 0 10 0">Farms:</TextBlock>
                                         <TextBlock Grid.Row="4" Grid.Column="3"  FontSize="14" Text="{Binding AverageFarm}" Foreground="Green"/>-->
                                         <TextBlock Grid.Row="11" Grid.Column="2" Grid.ColumnSpan="2" FontSize="14" Margin="0 0 50 0">Total time played:</TextBlock>
-                                        <TextBlock Grid.Row="11" Grid.Column="3" Grid.ColumnSpan="2" FontSize="14" Text="{Binding TotalTimePlayed}" Margin="50,0,0,0" Foreground="Green"/>
-                                        <TextBlock Grid.Row="12" Grid.Column="2" Grid.ColumnSpan="2" FontSize="14" Margin="0,0,50,0" >Total games:</TextBlock>
-                                        <TextBlock Grid.Row="12" Grid.Column="3" Grid.ColumnSpan="2" FontSize="14" Text="{Binding TotalGames}" Margin="50,0,0,0" Foreground="Green"/>
+
+                                        <StackPanel Grid.Row="11" Grid.Column="3" Margin="20,0,0,0" Grid.ColumnSpan="2" Orientation="Horizontal">
+                                            <TextBlock  FontSize="14" Text="{Binding TotalHoursPlayed}"  Foreground="Green"/>
+                                            <TextBlock  FontSize="14" Text="hours (" Margin="5,0,0,0" />
+                                            <TextBlock  FontSize="14" Text="{Binding TotalDaysPlayed}"  Foreground="Green"/>
+                                            <TextBlock  FontSize="14" Text="days)" Margin="5,0,0,0" />
+                                        </StackPanel>
+
+                                        <TextBlock Grid.Row="12" Grid.Column="2" Grid.ColumnSpan="2" FontSize="14" Margin="0,0,50,0" >Total:</TextBlock>
+                                        <TextBlock Grid.Row="12" Grid.Column="3" Grid.ColumnSpan="2" FontSize="14" Text="{Binding TotalGames}" Margin="20,0,0,0" Foreground="Green"/>
                                         <!--<TextBlock Grid.Row="7" Grid.Column="2"  FontSize="14" Margin="0 0 10 0">Wins:</TextBlock>
                                         <TextBlock Grid.Row="8" Grid.Column="2"  FontSize="14" Margin="0 0 10 0">Losses:</TextBlock> -->
                                         <TextBlock Grid.Row="0" Grid.Column="4"  Grid.ColumnSpan="2" FontSize="16"  VerticalAlignment="Center" HorizontalAlignment="Center" >Ward score:</TextBlock>
                                         <TextBlock Grid.Row="1" Grid.Column="4"  Grid.ColumnSpan="2" FontSize="14" Margin="5 0 10 0">Your ward score is:</TextBlock>
                                         <TextBlock Grid.Row="2" Grid.Column="4"  FontSize="14" Margin="5 0 10 0">Score:</TextBlock>
+                                        <TextBlock Grid.Row="2" Grid.Column="5"  FontSize="14" Text="{Binding WardScore}" Foreground="Green"/>
                                         <TextBlock Grid.Row="3" Grid.Column="4"  FontSize="14" Margin="5 0 10 0">Mage:</TextBlock>
+                                        <TextBlock Grid.Row="3" Grid.Column="5"  FontSize="14" Text="{Binding WardMage}" Foreground="Green"/>
                                         <TextBlock Grid.Row="4" Grid.Column="4"  FontSize="14" Margin="5 0 10 0">Assasin:</TextBlock>
+                                        <TextBlock Grid.Row="4" Grid.Column="5"  FontSize="14" Text="{Binding WardAssasin}" Foreground="Green"/>
                                         <TextBlock Grid.Row="5" Grid.Column="4"  FontSize="14" Margin="5 0 10 0">Marskman:</TextBlock>
+                                        <TextBlock Grid.Row="5" Grid.Column="5"  FontSize="14" Text="{Binding WardMarksman}" Foreground="Green"/>
                                         <TextBlock Grid.Row="6" Grid.Column="4"  FontSize="14" Margin="5 0 10 0">Fighter:</TextBlock>
+                                        <TextBlock Grid.Row="6" Grid.Column="5"  FontSize="14" Text="{Binding WardFighter}" Foreground="Green"/>
                                         <TextBlock Grid.Row="7" Grid.Column="4"  FontSize="14" Margin="5 0 10 0">Tank:</TextBlock>
+                                        <TextBlock Grid.Row="7" Grid.Column="5"  FontSize="14" Text="{Binding WardTank}" Foreground="Green"/>
                                         <TextBlock Grid.Row="8" Grid.Column="4"  FontSize="14" Margin="5 0 10 5">Support:</TextBlock>
+                                        <TextBlock Grid.Row="8" Grid.Column="5"  FontSize="14" Text="{Binding WardSupport}" Foreground="Green"/>
 
                                         <Border Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="6"  BorderBrush="Black" BorderThickness="0 0 0 0.3" SnapsToDevicePixels="True"/>
                                         <Border Grid.Row="10" Grid.Column="0" Grid.ColumnSpan="6"  BorderBrush="Black" BorderThickness="0 0.3 0 0.3" SnapsToDevicePixels="True"/>
@@ -372,7 +411,7 @@
                     <Border Grid.Row="4" Grid.ColumnSpan="5" BorderBrush="Black" BorderThickness="0 0 0 0.3" SnapsToDevicePixels="True"/>
                     <TextBlock Grid.Row="5" Grid.Column="2" FontSize="16" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="27,20,58,19">Ward Score:</TextBlock>
                     <Border Grid.Row="5" Grid.ColumnSpan="5" BorderBrush="Black" BorderThickness="0 0 0 0.3" SnapsToDevicePixels="True"/>
-                    <TextBlock Grid.Row="6" Grid.Column="2" FontSize="16" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="24,19,55,19">Total Games:</TextBlock>
+                    <TextBlock Grid.Row="6" Grid.Column="2" FontSize="16" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="24,19,55,19">Total:</TextBlock>
                     <TextBlock Grid.Row="6" Grid.Column="3" FontSize="16" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="24,19,55,19" Foreground="Green" Text="{Binding TotalGames}"></TextBlock>
                     <Border Grid.Row="6" Grid.ColumnSpan="5" BorderBrush="Black" BorderThickness="0 0 0 0.3" SnapsToDevicePixels="True"/>
                     <TextBlock Grid.Row="7" Grid.Column="1" FontSize="16" HorizontalAlignment="Center" VerticalAlignment="Center" Grid.ColumnSpan="2" Margin="14,20,29,19">Average Game time:</TextBlock>
@@ -384,7 +423,7 @@
                 </Grid>
             </TabItem>
         </TabControl>
-        <Image HorizontalAlignment="Left" Margin="0,-49,0,0" VerticalAlignment="Top"   Source="Logo.png" Height="217" Width="256"  />
+        <Image HorizontalAlignment="Left" Margin="0,-49,0,0" VerticalAlignment="Top"   Source="Logo.png" Height="146" Width="256" Stretch="UniformToFill" />
 
     </Grid>
 </Window>
